--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 MAIL_ADDRESS=
 MAIL_PASSWORD=
 TOMAIL=
+
+DB_USERNAME="RDSの接続ユーザ名"
+DB_PASSWORD="RDSのパスワード"
+DB_HOST="RDSのエンドポイント名"
+DB_DATABASE="アプリケーション名"
