--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,9 @@ production:
   database: <%= ENV['DB_DATABASE'] %>
   adapter: mysql2
   encoding: utf8
-  charset: utf8mb4
-  collation: utf8mb4_general_ci
+  charset: utf8
+  collation: utf8
+  # mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
