--- a/config/database.yml
+++ b/config/database.yml
@@ -26,8 +26,7 @@ production:
   adapter: mysql2
   encoding: utf8
   charset: utf8
-  collation: utf8
-  # mb4_general_ci
+  collation: utf8mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
